-PIZZ- Fix global page height to stretch to 100%

--- a/_Projects/-PIZZ-/about.html
+++ b/_Projects/-PIZZ-/about.html
@@ -11,82 +11,84 @@
 </head>
 
 <body>
-
-  <header>
-    <nav>
-      <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
-      </div>
-      <div class="header-right">
-        <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
-            width="50px">
+<div class="main-container">
+  
+    <header>
+      <nav>
+        <div class="header-left">
+          <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
         </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="about.html" aria-current="page">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="top-section">
-    <h1>Pizzeria Da Nono</h1>
-    <h1>About Us</h1>
-  </section>
-
-  <main class="about">
-    <section class="about-content">
-      <div class="about-container">
-      <div class="about-side-container">
-        <img class="about-img" src="images/nono_pizzaiolo.jpg" alt="A photograh of Nono, our chef pizzaiolo, in their kitchen.">
-      </div>
-      <p>
-        Founded by the innovative and passionate chef Nono in 2018, our restaurant is a vibrant blend of traditional cuisine and modern aesthetics. Nono envisioned a place where the rich flavors of traditional recipes could be enjoyed in a contemporary and lively setting.
-      </p>
-      </div>
-      <p>
-        From the moment you step inside, you are greeted by a dynamic atmosphere that is both welcoming and exhilarating. Our eclectic decor features a mix of kitsch and retro furniture, complemented by striking pieces of art that add a unique flair to the dining experience. The pulsating beats of electro music set the tone, creating an energetic backdrop for memorable meals.
-      </p>
-      <p>
-        At the heart of our restaurant is a commitment to culinary excellence. Nono's dedication to using fresh, high-quality ingredients and time-honored cooking techniques ensures that each dish is a celebration of tradition. Whether you are savoring a classic favorite or exploring new flavors, our menu offers something for every palate.
-      </p>
-      <div class="about-container">
-        <p>
-          Our space is designed to be more than just a place to eat; it is a community hub where people come together to enjoy great food, art, and music. We take pride in fostering an inclusive environment where everyone feels at home, and where the spirit of creativity and innovation thrives.
-        </p>
-        <div class="about-side-container">
-          <img class="about-img" src="images/danono_indoors.jpg" alt="A photograh of Da Nono's indoor dining area showing tables and booths.">
+        <div class="header-right">
+          <div class="logo">
+            <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
+              width="50px">
+          </div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="about.html" aria-current="page">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
         </div>
-        </div>
-      <p>
-        Join us for an unforgettable dining experience that bridges the gap between the old and the new. At our restaurant, tradition meets trend, and every visit promises to be a feast for the senses. Thank you for being a part of our journey, and we look forward to welcoming you soon.
-      </p>
+      </nav>
+    </header>
+  
+    <section class="top-section">
+      <h1>Pizzeria Da Nono</h1>
+      <h1>About Us</h1>
     </section>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#phone">+49 123 456-7890</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="#email">info@danono.com</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#facebook">Facebook</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#instagram">Instagram</a></p>
-    </div>
-  </footer>
+  
+    <main class="about">
+      <section class="about-content">
+        <div class="about-container">
+        <div class="about-side-container">
+          <img class="about-img" src="images/nono_pizzaiolo.jpg" alt="A photograh of Nono, our chef pizzaiolo, in their kitchen.">
+        </div>
+        <p>
+          Founded by the innovative and passionate chef Nono in 2018, our restaurant is a vibrant blend of traditional cuisine and modern aesthetics. Nono envisioned a place where the rich flavors of traditional recipes could be enjoyed in a contemporary and lively setting.
+        </p>
+        </div>
+        <p>
+          From the moment you step inside, you are greeted by a dynamic atmosphere that is both welcoming and exhilarating. Our eclectic decor features a mix of kitsch and retro furniture, complemented by striking pieces of art that add a unique flair to the dining experience. The pulsating beats of electro music set the tone, creating an energetic backdrop for memorable meals.
+        </p>
+        <p>
+          At the heart of our restaurant is a commitment to culinary excellence. Nono's dedication to using fresh, high-quality ingredients and time-honored cooking techniques ensures that each dish is a celebration of tradition. Whether you are savoring a classic favorite or exploring new flavors, our menu offers something for every palate.
+        </p>
+        <div class="about-container">
+          <p>
+            Our space is designed to be more than just a place to eat; it is a community hub where people come together to enjoy great food, art, and music. We take pride in fostering an inclusive environment where everyone feels at home, and where the spirit of creativity and innovation thrives.
+          </p>
+          <div class="about-side-container">
+            <img class="about-img" src="images/danono_indoors.jpg" alt="A photograh of Da Nono's indoor dining area showing tables and booths.">
+          </div>
+          </div>
+        <p>
+          Join us for an unforgettable dining experience that bridges the gap between the old and the new. At our restaurant, tradition meets trend, and every visit promises to be a feast for the senses. Thank you for being a part of our journey, and we look forward to welcoming you soon.
+        </p>
+      </section>
+    </main>
+  
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+        <p><a href="#phone">+49 123 456-7890</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+        <p><a href="#email">info@danono.com</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+        <p><a href="#facebook">Facebook</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+        <p><a href="#instagram">Instagram</a></p>
+      </div>
+    </footer>
+</div>
 
 </body>
 
