--- a/_Projects/-PIZZ-/contact.html
+++ b/_Projects/-PIZZ-/contact.html
@@ -11,84 +11,86 @@
 </head>
 
 <body>
-
-  <header>
-    <nav>
-      <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
-      </div>
-      <div class="header-right">
-        <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
-            width="50px">
+<div class="main-container">
+  
+    <header>
+      <nav>
+        <div class="header-left">
+          <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
         </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" aria-current="page">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="top-section">
-    <h1>Pizzeria Da Nono</h1>
-    <h1>Contact Us</h1>
-  </section>
-
-  <main class="contact">
-    <section class="contact-content">
-      <p>
-        We'd love to hear from you! Whether you have a question about our menu, want to make a reservation, or just want to share your experience, please feel free to reach out. Fill out the form below, and we will get back to you as soon as possible.
-      </p>
-      <form class="contact-form" id="contact-form" action="#" method="post">
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" id="form-name-input" name="name">
-          <div class="form-error" id="name-error"></div>
+        <div class="header-right">
+          <div class="logo">
+            <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
+              width="50px">
+          </div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html" aria-current="page">Contact Us</a></li>
+          </ul>
         </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="form-email-input" name="email">
-          <div class="form-error" id="email-error"></div>
-        </div>
-        <div class="form-group">
-          <label for="subject">Subject:</label>
-          <input type="text" id="form-subject-input" name="subject">
-          <div class="form-error" id="subject-error"></div>
-        </div>
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea id="message" name="form-message-input" rows="5"></textarea>
-          <div class="form-error" id="message-error"></div>
-        </div>
-        <button class="form-submit-button" id="form-submit" type="submit">Send Message</button>
-        <div class="" id="form-success"></div>
-      </form>
+      </nav>
+    </header>
+  
+    <section class="top-section">
+      <h1>Pizzeria Da Nono</h1>
+      <h1>Contact Us</h1>
     </section>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#phone">+49 123 456-7890</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="#email">info@danono.com</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#facebook">Facebook</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#instagram">Instagram</a></p>
-    </div>
-  </footer>
+  
+    <main class="contact">
+      <section class="contact-content">
+        <p>
+          We'd love to hear from you! Whether you have a question about our menu, want to make a reservation, or just want to share your experience, please feel free to reach out. Fill out the form below, and we will get back to you as soon as possible.
+        </p>
+        <form class="contact-form" id="contact-form" action="#" method="post">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="form-name-input" name="name">
+            <div class="form-error" id="name-error"></div>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="form-email-input" name="email">
+            <div class="form-error" id="email-error"></div>
+          </div>
+          <div class="form-group">
+            <label for="subject">Subject:</label>
+            <input type="text" id="form-subject-input" name="subject">
+            <div class="form-error" id="subject-error"></div>
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="form-message-input" rows="5"></textarea>
+            <div class="form-error" id="message-error"></div>
+          </div>
+          <button class="form-submit-button" id="form-submit" type="submit">Send Message</button>
+          <div class="" id="form-success"></div>
+        </form>
+      </section>
+    </main>
+  
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+        <p><a href="#phone">+49 123 456-7890</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+        <p><a href="#email">info@danono.com</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+        <p><a href="#facebook">Facebook</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+        <p><a href="#instagram">Instagram</a></p>
+      </div>
+    </footer>
+</div>
 
 </body>
 
