--- a/_Projects/-PIZZ-/gallery.html
+++ b/_Projects/-PIZZ-/gallery.html
@@ -11,71 +11,73 @@
 </head>
 
 <body>
-
-  <header>
-    <nav>
-      <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
-      </div>
-      <div class="header-right">
-        <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
-            width="50px">
+<div class="main-container">
+  
+    <header>
+      <nav>
+        <div class="header-left">
+          <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
         </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html" aria-current="page">Gallery</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+        <div class="header-right">
+          <div class="logo">
+            <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
+              width="50px">
+          </div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html" aria-current="page">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  
+    <section class="top-section">
+      <h1>Pizzeria Da Nono</h1>
+      <h1>Gallery</h1>
+    </section>
+  
+    <main class="gallery">
+      <div><img src="images/gallery/gallery_1.jpg" alt="Gallery Image 1" /></div>
+      <div><img src="images/gallery/gallery_2.jpg" alt="Gallery Image 2" /></div>
+      <div><img src="images/gallery/gallery_3.jpg" alt="Gallery Image 3" /></div>
+      <div><img src="images/gallery/gallery_4.jpg" alt="Gallery Image 4" /></div>
+      <div><img src="images/gallery/gallery_5.jpg" alt="Gallery Image 5" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_6.jpg" alt="Gallery Image 6" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_7.jpg" alt="Gallery Image 7" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_8.jpg" alt="Gallery Image 8" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_9.jpg" alt="Gallery Image 9" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_10.jpg" alt="Gallery Image 10" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_11.jpg" alt="Gallery Image 11" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_12.jpg" alt="Gallery Image 12" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_13.jpg" alt="Gallery Image 13" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_14.jpg" alt="Gallery Image 14" /></div>
+      <div><img src="images/gallery/gallery_15.jpg" alt="Gallery Image 15" /></div>
+      <div><img class="portrait" src="images/gallery/gallery_16.jpg" alt="Gallery Image 16" /></div>
+    </main>
+  
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+        <p><a href="#phone">+49 123 456-7890</a></p>
       </div>
-    </nav>
-  </header>
-
-  <section class="top-section">
-    <h1>Pizzeria Da Nono</h1>
-    <h1>Gallery</h1>
-  </section>
-
-  <main class="gallery">
-    <div><img src="images/gallery/gallery_1.jpg" alt="Gallery Image 1" /></div>
-    <div><img src="images/gallery/gallery_2.jpg" alt="Gallery Image 2" /></div>
-    <div><img src="images/gallery/gallery_3.jpg" alt="Gallery Image 3" /></div>
-    <div><img src="images/gallery/gallery_4.jpg" alt="Gallery Image 4" /></div>
-    <div><img src="images/gallery/gallery_5.jpg" alt="Gallery Image 5" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_6.jpg" alt="Gallery Image 6" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_7.jpg" alt="Gallery Image 7" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_8.jpg" alt="Gallery Image 8" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_9.jpg" alt="Gallery Image 9" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_10.jpg" alt="Gallery Image 10" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_11.jpg" alt="Gallery Image 11" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_12.jpg" alt="Gallery Image 12" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_13.jpg" alt="Gallery Image 13" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_14.jpg" alt="Gallery Image 14" /></div>
-    <div><img src="images/gallery/gallery_15.jpg" alt="Gallery Image 15" /></div>
-    <div><img class="portrait" src="images/gallery/gallery_16.jpg" alt="Gallery Image 16" /></div>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#phone">+49 123 456-7890</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="#email">info@danono.com</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#facebook">Facebook</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#instagram">Instagram</a></p>
-    </div>
-  </footer>
+      <div class="footer-section">
+        <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+        <p><a href="#email">info@danono.com</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+        <p><a href="#facebook">Facebook</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+        <p><a href="#instagram">Instagram</a></p>
+      </div>
+    </footer>
+</div>
 
 </body>
 
