--- a/_Projects/-PIZZ-/index.html
+++ b/_Projects/-PIZZ-/index.html
@@ -11,60 +11,62 @@
 </head>
 
 <body>
-
-  <header>
-    <nav>
-      <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
-      </div>
-      <div class="header-right">
-        <div class="logo">
-            <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
-              width="50px">
+<div class="main-container">
+  
+    <header>
+      <nav>
+        <div class="header-left">
+          <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
         </div>
-        <ul>
-          <li><a href="index.html" aria-current="page">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+        <div class="header-right">
+          <div class="logo">
+              <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
+                width="50px">
+          </div>
+          <ul>
+            <li><a href="index.html" aria-current="page">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  
+    <section class="hero">
+      <h1>Pizzeria Da Nono</h1>
+      <button class="order-button" onclick=""><a href="order.html">Order Now</a></button>
+    </section>
+  
+    <main class="info">
+      <h2>Our Location</h2>
+      <p>Zionskirchstr., 10119 Berlin</p>
+      <h2>Opening Hours</h2>
+      <p>Monday - Friday: 11:00 AM - 10:00 PM</p>
+      <p>Saturday - Sunday: 12:00 PM - 11:00 PM</p>
+    </main>
+  
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+        <p><a href="#phone">+49 123 456-7890</a></p>
       </div>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h1>Pizzeria Da Nono</h1>
-    <button class="order-button" onclick=""><a href="order.html">Order Now</a></button>
-  </section>
-
-  <main class="info">
-    <h2>Our Location</h2>
-    <p>Zionskirchstr., 10119 Berlin</p>
-    <h2>Opening Hours</h2>
-    <p>Monday - Friday: 11:00 AM - 10:00 PM</p>
-    <p>Saturday - Sunday: 12:00 PM - 11:00 PM</p>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#phone">+49 123 456-7890</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="#email">info@danono.com</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#facebook">Facebook</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#instagram">Instagram</a></p>
-    </div>
-  </footer>
+      <div class="footer-section">
+        <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+        <p><a href="#email">info@danono.com</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+        <p><a href="#facebook">Facebook</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+        <p><a href="#instagram">Instagram</a></p>
+      </div>
+    </footer>
+</div>
 
 </body>
 
