--- a/_Projects/-PIZZ-/menu.html
+++ b/_Projects/-PIZZ-/menu.html
@@ -11,212 +11,214 @@
 </head>
 
 <body>
-
-  <header>
-    <nav>
-      <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
-      </div>
-      <div class="header-right">
-        <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
-            width="50px">
+<div class="main-container">
+  
+    <header>
+      <nav>
+        <div class="header-left">
+          <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
         </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html" aria-current="page">Menu</a></li>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="top-section">
-    <h1>Pizzeria Da Nono</h1>
-    <h1>Our Menu</h1>
-  </section>
-
-  <main class="menu">
-    <h2>Pizza</h2>
-    <div class="menu-category">
-      <div class="menu-item">
-        <div class="item-name">Margherita</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Basil</div>
-        <div class="item-info">Vegetarian</div>
-        <div class="item-price">€8.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Marinara</div>
-        <div class="item-ingredients">Tomato, Garlic, Oregano</div>
-        <div class="item-info">Vegan</div>
-        <div class="item-price">€7.50</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Quattro Stagioni</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Artichokes, Ham, Mushrooms, Olives</div>
-        <div class="item-info"></div>
-        <div class="item-price">€10.50</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Prosciutto e Funghi</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Ham, Mushrooms</div>
-        <div class="item-info"></div>
-        <div class="item-price">€9.50</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Diavola</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Spicy Salami</div>
-        <div class="item-info">Spicy</div>
-        <div class="item-price">€9.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Quattro Formaggi</div>
-        <div class="item-ingredients">Mozzarella, Gorgonzola, Parmesan, Fontina</div>
-        <div class="item-info">Vegetarian</div>
-        <div class="item-price">€10.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Vegetariana</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Grilled Vegetables</div>
-        <div class="item-info">Vegetarian</div>
-        <div class="item-price">€9.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Capricciosa</div>
-        <div class="item-ingredients">Tomato, Mozzarella, Artichokes, Ham, Mushrooms, Olives, Egg</div>
-        <div class="item-info"></div>
-        <div class="item-price">€11.00</div>
-      </div>
-    </div>
+        <div class="header-right">
+          <div class="logo">
+            <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
+              width="50px">
+          </div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html" aria-current="page">Menu</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
   
-    <h2>Pasta</h2>
-    <div class="menu-category">
-      <div class="menu-item">
-        <div class="item-name">Spaghetti Carbonara</div>
-        <div class="item-ingredients">Eggs, Pecorino Cheese, Guanciale, Black Pepper</div>
-        <div class="item-info"></div>
-        <div class="item-price">€11.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Lasagna</div>
-        <div class="item-ingredients">Layers of Pasta, Bolognese Sauce, Béchamel, Parmesan</div>
-        <div class="item-info"></div>
-        <div class="item-price">€12.00</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Ravioli</div>
-        <div class="item-ingredients">Stuffed Pasta with Ricotta and Spinach</div>
-        <div class="item-info">Vegetarian</div>
-        <div class="item-price">€11.50</div>
-      </div>
-    </div>
+    <section class="top-section">
+      <h1>Pizzeria Da Nono</h1>
+      <h1>Our Menu</h1>
+    </section>
   
-    <h2>Salads</h2>
-    <div class="menu-category">
-      <div class="menu-item">
-        <div class="item-name">Caesar Salad</div>
-        <div class="item-ingredients">Romaine Lettuce, Croutons, Parmesan, Caesar Dressing</div>
-        <div class="item-info"></div>
-        <div class="item-price">€7.50</div>
+    <main class="menu">
+      <h2>Pizza</h2>
+      <div class="menu-category">
+        <div class="menu-item">
+          <div class="item-name">Margherita</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Basil</div>
+          <div class="item-info">Vegetarian</div>
+          <div class="item-price">€8.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Marinara</div>
+          <div class="item-ingredients">Tomato, Garlic, Oregano</div>
+          <div class="item-info">Vegan</div>
+          <div class="item-price">€7.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Quattro Stagioni</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Artichokes, Ham, Mushrooms, Olives</div>
+          <div class="item-info"></div>
+          <div class="item-price">€10.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Prosciutto e Funghi</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Ham, Mushrooms</div>
+          <div class="item-info"></div>
+          <div class="item-price">€9.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Diavola</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Spicy Salami</div>
+          <div class="item-info">Spicy</div>
+          <div class="item-price">€9.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Quattro Formaggi</div>
+          <div class="item-ingredients">Mozzarella, Gorgonzola, Parmesan, Fontina</div>
+          <div class="item-info">Vegetarian</div>
+          <div class="item-price">€10.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Vegetariana</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Grilled Vegetables</div>
+          <div class="item-info">Vegetarian</div>
+          <div class="item-price">€9.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Capricciosa</div>
+          <div class="item-ingredients">Tomato, Mozzarella, Artichokes, Ham, Mushrooms, Olives, Egg</div>
+          <div class="item-info"></div>
+          <div class="item-price">€11.00</div>
+        </div>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Caprese Salad</div>
-        <div class="item-ingredients">Tomatoes, Mozzarella, Basil, Olive Oil</div>
-        <div class="item-info">Vegetarian</div>
-        <div class="item-price">€8.00</div>
-      </div>
-    </div>
   
-    <h2>Wine</h2>
-    <div class="menu-category">
-      <div class="menu-item">
-        <div class="item-name">Chianti</div>
-        <div class="item-ingredients">Red Wine from Tuscany</div>
-        <div class="item-info"></div>
-        <div class="item-price">€5.00/glass, €20.00/bottle</div>
+      <h2>Pasta</h2>
+      <div class="menu-category">
+        <div class="menu-item">
+          <div class="item-name">Spaghetti Carbonara</div>
+          <div class="item-ingredients">Eggs, Pecorino Cheese, Guanciale, Black Pepper</div>
+          <div class="item-info"></div>
+          <div class="item-price">€11.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Lasagna</div>
+          <div class="item-ingredients">Layers of Pasta, Bolognese Sauce, Béchamel, Parmesan</div>
+          <div class="item-info"></div>
+          <div class="item-price">€12.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Ravioli</div>
+          <div class="item-ingredients">Stuffed Pasta with Ricotta and Spinach</div>
+          <div class="item-info">Vegetarian</div>
+          <div class="item-price">€11.50</div>
+        </div>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Barolo</div>
-        <div class="item-ingredients">Red Wine from Piedmont</div>
-        <div class="item-info"></div>
-        <div class="item-price">€6.00/glass, €25.00/bottle</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Prosecco</div>
-        <div class="item-ingredients">Sparkling White Wine</div>
-        <div class="item-info"></div>
-        <div class="item-price">€4.50/glass, €18.00/bottle</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Pinot Grigio</div>
-        <div class="item-ingredients">White Wine from Veneto</div>
-        <div class="item-info"></div>
-        <div class="item-price">€5.00/glass, €20.00/bottle</div>
-      </div>
-      <div class="menu-item">
-        <div class="item-name">Montepulciano</div>
-        <div class="item-ingredients">Red Wine from Abruzzo</div>
-        <div class="item-info"></div>
-        <div class="item-price">€5.50/glass, €22.00/bottle</div>
-      </div>
-    </div>
   
-    <h2>Soft Drinks</h2>
-    <div class="menu-category">
-      <div class="menu-item">
-        <div class="item-name">Coca-Cola</div>
-        <div class="item-ingredients"></div>
-        <div class="item-info"></div>
-        <div class="item-price">€2.50</div>
+      <h2>Salads</h2>
+      <div class="menu-category">
+        <div class="menu-item">
+          <div class="item-name">Caesar Salad</div>
+          <div class="item-ingredients">Romaine Lettuce, Croutons, Parmesan, Caesar Dressing</div>
+          <div class="item-info"></div>
+          <div class="item-price">€7.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Caprese Salad</div>
+          <div class="item-ingredients">Tomatoes, Mozzarella, Basil, Olive Oil</div>
+          <div class="item-info">Vegetarian</div>
+          <div class="item-price">€8.00</div>
+        </div>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Sprite</div>
-        <div class="item-ingredients"></div>
-        <div class="item-info"></div>
-        <div class="item-price">€2.50</div>
+  
+      <h2>Wine</h2>
+      <div class="menu-category">
+        <div class="menu-item">
+          <div class="item-name">Chianti</div>
+          <div class="item-ingredients">Red Wine from Tuscany</div>
+          <div class="item-info"></div>
+          <div class="item-price">€5.00/glass, €20.00/bottle</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Barolo</div>
+          <div class="item-ingredients">Red Wine from Piedmont</div>
+          <div class="item-info"></div>
+          <div class="item-price">€6.00/glass, €25.00/bottle</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Prosecco</div>
+          <div class="item-ingredients">Sparkling White Wine</div>
+          <div class="item-info"></div>
+          <div class="item-price">€4.50/glass, €18.00/bottle</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pinot Grigio</div>
+          <div class="item-ingredients">White Wine from Veneto</div>
+          <div class="item-info"></div>
+          <div class="item-price">€5.00/glass, €20.00/bottle</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Montepulciano</div>
+          <div class="item-ingredients">Red Wine from Abruzzo</div>
+          <div class="item-info"></div>
+          <div class="item-price">€5.50/glass, €22.00/bottle</div>
+        </div>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Fanta</div>
-        <div class="item-ingredients"></div>
-        <div class="item-info"></div>
-        <div class="item-price">€2.50</div>
+  
+      <h2>Soft Drinks</h2>
+      <div class="menu-category">
+        <div class="menu-item">
+          <div class="item-name">Coca-Cola</div>
+          <div class="item-ingredients"></div>
+          <div class="item-info"></div>
+          <div class="item-price">€2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Sprite</div>
+          <div class="item-ingredients"></div>
+          <div class="item-info"></div>
+          <div class="item-price">€2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Fanta</div>
+          <div class="item-ingredients"></div>
+          <div class="item-info"></div>
+          <div class="item-price">€2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Mineral Water</div>
+          <div class="item-ingredients"></div>
+          <div class="item-info"></div>
+          <div class="item-price">€2.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Orange Juice</div>
+          <div class="item-ingredients"></div>
+          <div class="item-info"></div>
+          <div class="item-price">€3.00</div>
+        </div>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Mineral Water</div>
-        <div class="item-ingredients"></div>
-        <div class="item-info"></div>
-        <div class="item-price">€2.00</div>
+    </main>
+  
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+        <p><a href="#phone">+49 123 456-7890</a></p>
       </div>
-      <div class="menu-item">
-        <div class="item-name">Orange Juice</div>
-        <div class="item-ingredients"></div>
-        <div class="item-info"></div>
-        <div class="item-price">€3.00</div>
+      <div class="footer-section">
+        <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+        <p><a href="#email">info@danono.com</a></p>
       </div>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#phone">+49 123 456-7890</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="#email">info@danono.com</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#facebook">Facebook</a></p>
-    </div>
-    <div class="footer-section">
-      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#instagram">Instagram</a></p>
-    </div>
-  </footer>
+      <div class="footer-section">
+        <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+        <p><a href="#facebook">Facebook</a></p>
+      </div>
+      <div class="footer-section">
+        <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+        <p><a href="#instagram">Instagram</a></p>
+      </div>
+    </footer>
+</div>
 
 </body>
 
