Edit getElementById -> querySelector

--- a/20240611/afternoon/task1_fruits.html
+++ b/20240611/afternoon/task1_fruits.html
@@ -15,7 +15,7 @@
     // Task 1 JavaScript code goes here
     // 1. Create an array with the names of five fruits.
     // 2. Use JavaScript to display each fruit in an unordered list (<ul>) on a webpage.
-    const fruitList = document.getElementById("fruit-list");
+    const fruitList = document.querySelector("#fruit-list");
 
     const fruits = [
       "Guava",
