--- a/20240611/afternoon/task3_countries.html
+++ b/20240611/afternoon/task3_countries.html
@@ -23,8 +23,8 @@
     // 2. Display the names of the countries in an unordered list.
     // 3. Display the number of countries in a paragraph.
 
-    const countryList = document.getElementById("country-list");
-    const countryCount = document.getElementById("country-count");
+    const countryList = document.querySelector("#country-list");
+    const countryCount = document.querySelector("#country-count");
 
     countryArray = [
       "Tuvalu",
