--- a/20240611/afternoon/task4_animals.html
+++ b/20240611/afternoon/task4_animals.html
@@ -29,8 +29,8 @@
     // 1. Create an array with the names of four animals.
     // 2. Use JavaScript to remove the last animal and update the list.
 
-    const removeAnimalButton = document.getElementById("remove-animal-button");
-    const animalList = document.getElementById("animal-list");
+    const removeAnimalButton = document.querySelector("#remove-animal-button");
+    const animalList = document.querySelector("#animal-list");
 
     animalArray = [
       "🐸",
