Sync 0613 morning (map -- finished)

--- a/20240613/morning/index.html
+++ b/20240613/morning/index.html
@@ -14,7 +14,8 @@
   <label for="cityInput">City:</label>
   <input type="text" id="city-input" placeholder="Enter city name">
   <label for="population-input">Population:</label>
-  <input type="number" id="population-input" placeholder="Enter population"> <button onclick="addCity()">Add City</button>
+  <input type="number" id="population-input" placeholder="Enter population">
+  <button id="add-city-button">Add City</button>
 
 </body>
 </html>
